# VulkanView

./: .gitignore  CMakeLists.txt  README.md  compile.sh
dependencies/: README.md
shaders/: bloom.slang  csm_depth.slang  exposure.slang  pbr.slang  pbr_utils.slang  sky.slang  triangle.frag  triangle.vert  water.slang
src/: Application.cpp  Application.h  Shaders.h  main.cpp
src/core/: engine.cpp  engine.h  main.cpp  update_publisher.cpp  update_publisher.h
src/ecs/: camera_component.cpp
src/renderer/: pipeline.cpp  renderer.h  renderer_compute.cpp  renderer_core.cpp  renderer_pipelines.cpp  renderer_ray_query.cpp  renderer_rendering.cpp  renderer_resources.cpp  vma_impl.cpp
src/scene/: buoyancy_scene.cpp  buoyancy_scene.h  model_manager_scene.cpp  model_manager_scene.h  physics_scenes.cpp  physics_scenes.h  primitive_meshes.cpp  primitive_meshes.h  scene_factory.cpp  scene_factory.h  scene_loading.cpp  scene_ui.cpp  scene_ui.h  spawner_scene.cpp  spawner_scene.h  tessendorf.cpp  tessendorf.h  wave_physics.cpp  wave_physics.h
src/systems/: imgui_system.cpp  imgui_system.h  physics_system.cpp  physics_system.h  water_system.cpp  water_system.h
vulkan_profiles/: SimpleEngine_baseline.json
